--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
 <a href="./examples/running-animation/index.html" target="_blank">examples/running-animation</a><br>
 <a href="./examples/tangent-chord/index.html" target="_blank">examples/tangent-chord</a><br>
 <a href="./examples/tictactoe/index.html" target="_blank">examples/tictactoe</a><br>
+<a href="./examples/vector-adition/index.html" target="_blank">examples/vector-adition</a><br>
 <a href="./examples/windmill/index.html" target="_blank">examples/windmill</a><br>
