--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <a href="./examples/human-animation/index.html" target="_blank">examples/human-animation</a><br>
 <a href="./examples/keplers-law/index.html" target="_blank">examples/keplers-law</a><br>
 <a href="./examples/listeners-car/index.html" target="_blank">examples/listeners-car</a><br>
+<a href="./examples/physics-simulation/index.html" target="_blank">examples/physics-simulation</a><br>
 <a href="./examples/running-animation/index.html" target="_blank">examples/running-animation</a><br>
 <a href="./examples/tangent-chord/index.html" target="_blank">examples/tangent-chord</a><br>
 <a href="./examples/tictactoe/index.html" target="_blank">examples/tictactoe</a><br>
