--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <a href="./examples/SolarSystem/index.html" target="_blank">examples/SolarSystem</a><br>
 <a href="./examples/analog-clock/index.html" target="_blank">examples/analog-clock</a><br>
 <a href="./examples/cross_the_road/index.html" target="_blank">examples/cross_the_road</a><br>
+<a href="./examples/force-directed-graph/index.html" target="_blank">examples/force-directed-graph</a><br>
 <a href="./examples/human-animation/index.html" target="_blank">examples/human-animation</a><br>
 <a href="./examples/keplers-law/index.html" target="_blank">examples/keplers-law</a><br>
 <a href="./examples/listeners-car/index.html" target="_blank">examples/listeners-car</a><br>
