Updated the frontend and the script

--- a/index.html
+++ b/index.html
@@ -1,13 +1,139 @@
-<a href="./examples/SolarSystem/index.html" target="_blank">examples/SolarSystem</a><br>
-<a href="./examples/analog-clock/index.html" target="_blank">examples/analog-clock</a><br>
-<a href="./examples/cross_the_road/index.html" target="_blank">examples/cross_the_road</a><br>
-<a href="./examples/force-directed-graph/index.html" target="_blank">examples/force-directed-graph</a><br>
-<a href="./examples/human-animation/index.html" target="_blank">examples/human-animation</a><br>
-<a href="./examples/keplers-law/index.html" target="_blank">examples/keplers-law</a><br>
-<a href="./examples/listeners-car/index.html" target="_blank">examples/listeners-car</a><br>
-<a href="./examples/physics-simulation/index.html" target="_blank">examples/physics-simulation</a><br>
-<a href="./examples/running-animation/index.html" target="_blank">examples/running-animation</a><br>
-<a href="./examples/tangent-chord/index.html" target="_blank">examples/tangent-chord</a><br>
-<a href="./examples/tictactoe/index.html" target="_blank">examples/tictactoe</a><br>
-<a href="./examples/vector-adition/index.html" target="_blank">examples/vector-adition</a><br>
-<a href="./examples/windmill/index.html" target="_blank">examples/windmill</a><br>
+<!DOCTYPE html>
+<html lang=en>
+	<head>
+		<title>Zense HacKnight 2k19</title>
+		<link rel="stylesheet" type="text/css" href="style.css"></link>
+	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" /></head>
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu|ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
+	<body>
+		<header id="title" class="ml-auto mr-auto"><img src="./zense.png" alt="Zense" /><br />HacKnight 2k19</header>
+
+		<label for="#links" id="label">Some examples for you to look at !</label>
+		<div class="col-12 col-md-9 ml-auto mr-auto">
+
+		<div class="card border-0">
+			<div class="card-body">
+			<p class="guide mr-auto">Click to view example</p>
+			<p class="guide float-right">Link to code</p>
+		</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/SolarSystem/index.html" class="link mr-auto" target="_blank">SolarSystem by Utkarsh Agarwal</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/SolarSystem" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/analog-clock/index.html" class="link mr-auto" target="_blank">analog-clock by Satvik Ramaprasad</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/analog-clock" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/boy-jumping-over-hurdles/index.html" class="link mr-auto" target="_blank">boy-jumping-over-hurdles by sal2701</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/boy-jumping-over-hurdles" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/collider/index.html" class="link mr-auto" target="_blank">collider by sal2701</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/collider" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/cross_the_road/index.html" class="link mr-auto" target="_blank">cross_the_road by Utkarsh Agarwal</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/cross_the_road" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/double-buffering/index.html" class="link mr-auto" target="_blank">double-buffering by sal2701</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/double-buffering" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/force-directed-graph/index.html" class="link mr-auto" target="_blank">force-directed-graph by Satvik Ramaprasad</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/force-directed-graph" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/human-animation/index.html" class="link mr-auto" target="_blank">human-animation by Kartik-Sama</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/human-animation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/keplers-law/index.html" class="link mr-auto" target="_blank">keplers-law by Satvik Ramaprasad</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/keplers-law" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/listeners-car/index.html" class="link mr-auto" target="_blank">listeners-car by Shubhayu-Das</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/listeners-car" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/physics-simulation/index.html" class="link mr-auto" target="_blank">physics-simulation by Satvik Ramaprasad</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/physics-simulation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/running-animation/index.html" class="link mr-auto" target="_blank">running-animation by Rohit Katlaa</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/running-animation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/tangent-chord/index.html" class="link mr-auto" target="_blank">tangent-chord by Arpitha Srivathsa</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/tangent-chord" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/tictactoe/index.html" class="link mr-auto" target="_blank">tictactoe by Utkarsh Agarwal</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/tictactoe" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/vector-adition/index.html" class="link mr-auto" target="_blank">vector-adition by Satvik Ramaprasad</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/vector-adition" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./examples/windmill/index.html" class="link mr-auto" target="_blank">windmill by Sahaj8</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/examples/windmill" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		</div>
+			
+		<br /><br /><br /><br /><br />
+		<footer id="ending">Zense 2019</footer></body>
+</html>
