Updated the frontend and the script

--- a/index.html
+++ b/index.html
@@ -22,113 +22,197 @@
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/SolarSystem/index.html" class="link mr-auto" target="_blank">SolarSystem</a> <br>
+				<a href="./examples/SolarSystem/index.html" class="link mr-auto" target="_blank">Example: SolarSystem</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/SolarSystem" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/analog-clock/index.html" class="link mr-auto" target="_blank">analog-clock</a> <br>
+				<a href="./examples/analog-clock/index.html" class="link mr-auto" target="_blank">Example: analog-clock</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/analog-clock" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/boy-jumping-over-hurdles/index.html" class="link mr-auto" target="_blank">boy-jumping-over-hurdles</a> <br>
+				<a href="./examples/boy-jumping-over-hurdles/index.html" class="link mr-auto" target="_blank">Example: boy-jumping-over-hurdles</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/boy-jumping-over-hurdles" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/collider/index.html" class="link mr-auto" target="_blank">collider</a> <br>
+				<a href="./examples/collider/index.html" class="link mr-auto" target="_blank">Example: collider</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/collider" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/cross_the_road/index.html" class="link mr-auto" target="_blank">cross_the_road</a> <br>
+				<a href="./examples/cross_the_road/index.html" class="link mr-auto" target="_blank">Example: cross_the_road</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/cross_the_road" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/double-buffering/index.html" class="link mr-auto" target="_blank">double-buffering</a> <br>
+				<a href="./examples/double-buffering/index.html" class="link mr-auto" target="_blank">Example: double-buffering</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/double-buffering" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/force-directed-graph/index.html" class="link mr-auto" target="_blank">force-directed-graph</a> <br>
+				<a href="./examples/force-directed-graph/index.html" class="link mr-auto" target="_blank">Example: force-directed-graph</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/force-directed-graph" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/human-animation/index.html" class="link mr-auto" target="_blank">human-animation</a> <br>
+				<a href="./examples/human-animation/index.html" class="link mr-auto" target="_blank">Example: human-animation</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/human-animation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/keplers-law/index.html" class="link mr-auto" target="_blank">keplers-law</a> <br>
+				<a href="./examples/keplers-law/index.html" class="link mr-auto" target="_blank">Example: keplers-law</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/keplers-law" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/listeners-car/index.html" class="link mr-auto" target="_blank">listeners-car</a> <br>
+				<a href="./examples/listeners-car/index.html" class="link mr-auto" target="_blank">Example: listeners-car</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/listeners-car" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/physics-simulation/index.html" class="link mr-auto" target="_blank">physics-simulation</a> <br>
+				<a href="./examples/physics-simulation/index.html" class="link mr-auto" target="_blank">Example: physics-simulation</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/physics-simulation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/running-animation/index.html" class="link mr-auto" target="_blank">running-animation</a> <br>
+				<a href="./examples/running-animation/index.html" class="link mr-auto" target="_blank">Example: running-animation</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/running-animation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/tangent-chord/index.html" class="link mr-auto" target="_blank">tangent-chord</a> <br>
+				<a href="./examples/tangent-chord/index.html" class="link mr-auto" target="_blank">Example: tangent-chord</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/tangent-chord" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/tictactoe/index.html" class="link mr-auto" target="_blank">tictactoe</a> <br>
+				<a href="./examples/tictactoe/index.html" class="link mr-auto" target="_blank">Example: tictactoe</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/tictactoe" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/vector-adition/index.html" class="link mr-auto" target="_blank">vector-adition</a> <br>
+				<a href="./examples/vector-adition/index.html" class="link mr-auto" target="_blank">Example: vector-adition</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/vector-adition" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
 		<div class="card border-0">
 			<div class="card-body">
-				<a href="./examples/windmill/index.html" class="link mr-auto" target="_blank">windmill</a> <br>
+				<a href="./examples/windmill/index.html" class="link mr-auto" target="_blank">Example: windmill</a> <br>
 				<a href="https://github.com/zense/Canvas-Competition/tree/examples/windmill" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/angryBirds/index.html" class="link mr-auto" target="_blank">Submission: 2K19/angryBirds</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/angryBirds" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/animation101/index.html" class="link mr-auto" target="_blank">Submission: 2K19/animation101</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/animation101" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/chaoticRods/index.html" class="link mr-auto" target="_blank">Submission: 2K19/chaoticRods</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/chaoticRods" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/collisionSimulator/index.html" class="link mr-auto" target="_blank">Submission: 2K19/collisionSimulator</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/collisionSimulator" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/coreGame/index.html" class="link mr-auto" target="_blank">Submission: 2K19/coreGame</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/coreGame" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/dfsAnimation/index.html" class="link mr-auto" target="_blank">Submission: 2K19/dfsAnimation</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/dfsAnimation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/fruitNinja/index.html" class="link mr-auto" target="_blank">Submission: 2K19/fruitNinja</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/fruitNinja" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/jellyVolleyball/index.html" class="link mr-auto" target="_blank">Submission: 2K19/jellyVolleyball</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/jellyVolleyball" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/mirrors/index.html" class="link mr-auto" target="_blank">Submission: 2K19/mirrors</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/mirrors" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/physicsSimulator/index.html" class="link mr-auto" target="_blank">Submission: 2K19/physicsSimulator</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/physicsSimulator" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/starsInGalaxy/index.html" class="link mr-auto" target="_blank">Submission: 2K19/starsInGalaxy</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/starsInGalaxy" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/trapped/index.html" class="link mr-auto" target="_blank">Submission: 2K19/trapped</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/trapped" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
 			</div>
 		</div>
 
