Updated the frontend and the script

--- a/index.html
+++ b/index.html
@@ -132,6 +132,111 @@
 			</div>
 		</div>
 
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/airHockey/index.html" class="link mr-auto" target="_blank">2K19/airHockey</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/airHockey" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/airHockey2/index.html" class="link mr-auto" target="_blank">2K19/airHockey2</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/airHockey2" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/angryBirds/index.html" class="link mr-auto" target="_blank">2K19/angryBirds</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/angryBirds" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/animation101/index.html" class="link mr-auto" target="_blank">2K19/animation101</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/animation101" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/chaoticRods/index.html" class="link mr-auto" target="_blank">2K19/chaoticRods</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/chaoticRods" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/collisionSimulator/index.html" class="link mr-auto" target="_blank">2K19/collisionSimulator</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/collisionSimulator" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/coreGame/index.html" class="link mr-auto" target="_blank">2K19/coreGame</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/coreGame" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/dfsAnimation/index.html" class="link mr-auto" target="_blank">2K19/dfsAnimation</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/dfsAnimation" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/fruitNinja/index.html" class="link mr-auto" target="_blank">2K19/fruitNinja</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/fruitNinja" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/jellyVolleyball/index.html" class="link mr-auto" target="_blank">2K19/jellyVolleyball</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/jellyVolleyball" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/mirrors/index.html" class="link mr-auto" target="_blank">2K19/mirrors</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/mirrors" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/physicsSimulator/index.html" class="link mr-auto" target="_blank">2K19/physicsSimulator</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/physicsSimulator" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/pingPongGame/index.html" class="link mr-auto" target="_blank">2K19/pingPongGame</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/pingPongGame" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/starsInGalaxy/index.html" class="link mr-auto" target="_blank">2K19/starsInGalaxy</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/starsInGalaxy" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./HacKnight2K19/trapped/index.html" class="link mr-auto" target="_blank">2K19/trapped</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/HacKnight2K19/trapped" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
 		</div>
 			
 		<br /><br /><br /><br /><br />
