Added some submissions

--- a/index.html
+++ b/index.html
@@ -286,6 +286,20 @@
 			</div>
 		</div>
 
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./hacknight2019/carrom-HACKOHOLICS/index.html" class="link mr-auto" target="_blank">Submission: carrom-HACKOHOLICS</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/hacknight2019/carrom-HACKOHOLICS" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
+		<div class="card border-0">
+			<div class="card-body">
+				<a href="./hacknight2019/ghost-hunter/index.html" class="link mr-auto" target="_blank">Submission: ghost-hunter</a> <br>
+				<a href="https://github.com/zense/Canvas-Competition/tree/hacknight2019/ghost-hunter" class="link ml-auto" target="_blank"><i class="fab fa-github"></i></a><br>
+			</div>
+		</div>
+
 			<p class="guide2 mr-auto">Click to view example</p>
 			<span style="display:'block'; height: 5vh;"></span><hr/>
 
